formatted styles added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Experience">Experience</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Connect">Connect</a></li>
+      </ul>
+    </nav>
+
     <h1>Vicente Flores</h1>
 
     <section id="About">
@@ -19,10 +29,26 @@
     <section id="Experience">
       <h2>Experience</h2>
       <ul>
-        <li>Course 1: Code The Dream</li>
-        <li>Tech/Language: SQL.</li>
-        <li>Other experience: Human Resources.</li>
+        <li>
+          <div class="job-title">Course 1: Code The Dream</div>
+          <div class="job-dates">2024 - Present</div>
+          <div class="job-description">Tech/Language: SQL.</div>
+        </li>
+        <li>
+          <div class="job-title">Other experience: Human Resources.</div>
+          <div class="job-dates">2018 -2024</div>
+          <div class="job-description">Tasks</div>
+        </li>
       </ul>
+    </section>
+
+    <section id="Skills">
+      <h2>Skills</h2>
+    </section>
+
+    <section id="Projects">
+      <h2>Projects</h2>
+      <ul></ul>
     </section>
 
     <section id="Connect">
